# production-rag-architecture

./: README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: chat_controller.py
app/chat/: chat_service.py
app/core/: config.py  redis_client.py
app/embeddings/: embedding_factory.py
app/llm/: groq_provider.py  llm_factory.py
app/loaders/: pdf_loader.py
app/rag/: rag_builder.py  rag_service.py  retriever_factory.py
app/utils/: output_formatter.py
app/vectorstore/: vectorstore_repository.py
client-chat/: package-lock.json  package.json
client-chat/src/app/: layout.tsx
client-chat/src/app/api/chat/: route.ts
client-chat/src/app/chat/: ChatMessage.tsx  page.tsx
client-chat/src/app/components/: ChatInput.tsx
storage/vectorstore/: index.faiss  index.pkl
