[project]
name = "atendimento-cliente"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faiss-cpu>=1.13.2",
    "ipython>=9.10.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "pandas>=3.0.1",
    "pymupdf>=1.27.1",
    "redis>=7.2.1",
    "sentence-transformers>=5.2.3",
]
